[package]
name = "radon"
version = "0.7.3"
edition = "2024"
description = "package manager for git"
repository = "https://github.com/tungstencube-git/radon"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
ansi_term = "0.12.1"
toml = "0.8.12"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0.114"
tempfile = "3.3"
